updated submodule reference to latest shared-project commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <p>This is the main project section</p>
 <app-sample1-component></app-sample1-component>
 <app-sample2-component></app-sample2-component>
+
+<app-shared-component></app-shared-component>
